--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
+    "@types/express-jwt": "^6.0.0",
     "@types/jsonwebtoken": "^8.5.0",
     "ts-node-dev": "^1.1.1",
     "typescript": "^4.1.3"
