--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/bcrypt": "^3.0.0",
     "@types/express-jwt": "^6.0.0",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/lodash": "^4.14.167",
     "ts-node-dev": "^1.1.1",
     "typescript": "^4.1.3"
   }
