--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@overnightjs/logger": "^1.2.0",
-    "@sendgrid/mail": "^7.4.0",
+    "@sendgrid/mail": "^6.5.5",
     "bcrypt": "^5.0.0",
     "express-jwt": "^6.0.0",
     "express-validator": "^6.9.1",
@@ -21,15 +21,16 @@
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
     "reflect-metadata": "^0.1.13",
-    "sequelize": "^6.3.5",
-    "tslib": "^2.0.3"
+    "sequelize": "^6.3.5"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
     "@types/express-jwt": "^6.0.0",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/lodash": "^4.14.167",
+    "jest": "^26.6.3",
     "ts-node-dev": "^1.1.1",
+    "tslib": "^2.0.3",
     "typescript": "^4.1.3"
   }
 }
