--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
     "@types/express-jwt": "^6.0.0",
+    "@types/express-validator": "^3.0.0",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/lodash": "^4.14.167",
+    "@types/validator": "^13.1.2",
     "jest": "^26.6.3",
     "ts-node-dev": "^1.1.1",
     "tslib": "^2.0.3",
