--- a/package.json
+++ b/package.json
@@ -3,8 +3,25 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "jest": {
+    "roots": [
+      "<rootDir>/src"
+    ],
+    "preset": "ts-jest",
+    "moduleFileExtensions": [
+      "ts",
+      "js",
+      "node"
+    ],
+    "transform": {
+      "^.+\\.ts?$": "ts-jest"
+    },
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --detectOpenHandles --watchAll",
     "start": "ts-node-dev src/serverStart.ts"
   },
   "keywords": [],
@@ -15,7 +32,7 @@
     "@sendgrid/mail": "^6.5.5",
     "bcrypt": "^5.0.0",
     "express-jwt": "^6.0.0",
-    "express-validator": "^6.9.1",
+    "express-validator": "^6.9.2",
     "inversify": "^5.0.5",
     "inversify-express-utils": "^6.3.2",
     "jsonwebtoken": "^8.5.1",
@@ -29,8 +46,12 @@
     "@types/express-validator": "^3.0.0",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/lodash": "^4.14.167",
+    "@types/node": "^14.14.19",
+    "@types/supertest": "^2.0.10",
     "@types/validator": "^13.1.2",
     "jest": "^26.6.3",
+    "supertest": "^6.0.1",
+    "ts-jest": "^26.4.4",
     "ts-node-dev": "^1.1.1",
     "tslib": "^2.0.3",
     "typescript": "^4.1.3"
