--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "jest": {
     "verbose": true,
-    "setupFilesAfterEnv": ["./src/setupTests.ts"],
+    "setupFilesAfterEnv": [
+      "./src/setupTests.ts"
+    ],
     "roots": [
       "<rootDir>/src"
     ],
@@ -32,6 +34,7 @@
   "dependencies": {
     "@overnightjs/logger": "^1.2.0",
     "@sendgrid/mail": "^6.5.5",
+    "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
     "express-jwt": "^6.0.0",
     "express-validator": "^6.9.2",
