--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@sendgrid/mail": "^6.5.5",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
+    "cors": "^2.8.5",
     "express-jwt": "^6.0.0",
     "express-validator": "^6.9.2",
     "inversify": "^5.0.5",
@@ -47,6 +48,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
+    "@types/cors": "^2.8.9",
     "@types/express-jwt": "^6.0.0",
     "@types/express-validator": "^3.0.0",
     "@types/jsonwebtoken": "^8.5.0",
