--- a/package.json
+++ b/package.json
@@ -1,66 +1,70 @@
 {
-  "name": "work-log-backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "jest": {
-    "verbose": true,
-    "setupFilesAfterEnv": [
-      "./src/setupTests.ts"
-    ],
-    "roots": [
-      "<rootDir>/src"
-    ],
-    "preset": "ts-jest",
-    "moduleFileExtensions": [
-      "ts",
-      "js",
-      "node"
-    ],
-    "transform": {
-      "^.+\\.ts?$": "ts-jest"
+    "name": "work-log-backend",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "jest": {
+        "verbose": true,
+        "setupFilesAfterEnv": [
+            "./src/setupTests.ts"
+        ],
+        "roots": [
+            "<rootDir>/src"
+        ],
+        "preset": "ts-jest",
+        "moduleFileExtensions": [
+            "ts",
+            "js",
+            "node"
+        ],
+        "transform": {
+            "^.+\\.ts?$": "ts-jest"
+        },
+        "coveragePathIgnorePatterns": [
+            "/node_modules/"
+        ]
     },
-    "coveragePathIgnorePatterns": [
-      "/node_modules/"
-    ]
-  },
-  "scripts": {
-    "test": "jest --detectOpenHandles --maxWorkers=1 --watchAll",
-    "start": "ts-node-dev src/serverStart.ts"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@overnightjs/logger": "^1.2.0",
-    "@sendgrid/mail": "^6.5.5",
-    "axios": "^0.21.1",
-    "bcrypt": "^5.0.0",
-    "cors": "^2.8.5",
-    "express-jwt": "^6.0.0",
-    "express-validator": "^6.9.2",
-    "inversify": "^5.0.5",
-    "inversify-express-utils": "^6.3.2",
-    "jsonwebtoken": "^8.5.1",
-    "mysql2": "^2.2.5",
-    "reflect-metadata": "^0.1.13",
-    "sequelize": "^6.3.5"
-  },
-  "devDependencies": {
-    "@types/bcrypt": "^3.0.0",
-    "@types/cors": "^2.8.9",
-    "@types/express-jwt": "^6.0.0",
-    "@types/express-validator": "^3.0.0",
-    "@types/jsonwebtoken": "^8.5.0",
-    "@types/lodash": "^4.14.167",
-    "@types/node": "^14.14.19",
-    "@types/supertest": "^2.0.10",
-    "@types/validator": "^13.1.2",
-    "jest": "^26.6.3",
-    "supertest": "^6.0.1",
-    "ts-jest": "^26.4.4",
-    "ts-node-dev": "^1.1.1",
-    "tslib": "^2.0.3",
-    "typescript": "^4.1.3"
-  }
+    "scripts": {
+        "test": "jest --detectOpenHandles --maxWorkers=1 --watchAll",
+        "start": "ts-node-dev src/serverStart.ts",
+        "seed": "ts-node ./src/data/seeding/seedScript.ts"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "@overnightjs/logger": "^1.2.0",
+        "@sendgrid/mail": "^6.5.5",
+        "axios": "^0.21.1",
+        "bcrypt": "^5.0.0",
+        "cors": "^2.8.5",
+        "express-jwt": "^6.0.0",
+        "express-validator": "^6.9.2",
+        "inversify": "^5.0.5",
+        "inversify-express-utils": "^6.3.2",
+        "jsonwebtoken": "^8.5.1",
+        "mysql2": "^2.2.5",
+        "reflect-metadata": "^0.1.13",
+        "sequelize": "^6.3.5"
+    },
+    "devDependencies": {
+        "@types/bcrypt": "^3.0.0",
+        "@types/cors": "^2.8.9",
+        "@types/express-jwt": "^6.0.0",
+        "@types/express-validator": "^3.0.0",
+        "@types/jsonwebtoken": "^8.5.0",
+        "@types/lodash": "^4.14.167",
+        "@types/node": "^14.14.19",
+        "@types/sequelize": "^4.28.9",
+        "@types/supertest": "^2.0.10",
+        "@types/validator": "^13.1.2",
+        "jest": "^26.6.3",
+        "sequelize-cli": "^6.2.0",
+        "supertest": "^6.0.1",
+        "ts-jest": "^26.4.4",
+        "ts-node": "^9.1.1",
+        "ts-node-dev": "^1.1.1",
+        "tslib": "^2.0.3",
+        "typescript": "^4.1.3"
+    }
 }
