--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "test": "jest --detectOpenHandles --maxWorkers=1 --watchAll",
         "start": "ts-node-dev src/serverStart.ts",
         "seed": "ts-node ./src/data/seeding/seedScript.ts",
-        "compile": "tsc"
+        "build": "tsc"
     },
     "keywords": [],
     "author": "",
