--- a/package.json
+++ b/package.json
@@ -37,7 +37,13 @@
         "@types/sequelize": "^4.28.9",
         "@types/supertest": "^2.0.10",
         "@types/validator": "^13.1.2",
+        "@typescript-eslint/eslint-plugin": "^4.15.2",
+        "@typescript-eslint/parser": "^4.15.2",
+        "eslint": "^7.21.0",
+        "eslint-config-prettier": "^8.1.0",
+        "eslint-plugin-prettier": "^3.3.1",
         "jest": "^26.6.3",
+        "prettier": "^2.2.1",
         "sequelize-cli": "^6.2.0",
         "supertest": "^6.0.1",
         "ts-jest": "^26.4.4",
